# literate-octo-tribble

./: Cargo.toml
src/: analyzer.rs  cli.rs  error.rs  logger.rs  main.rs
tests/input/: correct_2.txt  incorrect_1.txt
