[package]
name = "literate-octo-tribble"
version = "0.1.0"
authors = ["SilanSurfer <szwarc.adam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"
prettytable-rs = "0.8"
serde_json = "1"
structopt = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
